2.71 getActionFrame no longer returns frames accurately #41536

Closed
opened 2014-08-22 04:03:14 +02:00 by Chris Smith · 6 comments

os Windows 8
cpu Intel 3570k
gpu amd 7970

Broken 7c9b8aa
Worked 2.69 Official

Since 2.71 getActionFrame will now revert to a frame of 0 once the animation has ended rather than the frame the anim ended on, as pre 2.71 did.
Seems like another one related to multithreded anims again or maybe the unlimited layers patch?. See screenshots for clarity.

The more worrying problem is it can now never return the very last frame before it reverts to returning a frame of 0 which is bad for your logic if it works on using that very last frame played. it seems it can miss the last anim frame if the framerate alters during animation playback. Hard to report in a blend that needs to stress your system. but I can post some screenshots from some animation runs to prove it.

2.71
2.7.jpg

2.69
2.6.jpg

getAnimFrame_Bug.blend

os Windows 8 cpu Intel 3570k gpu amd 7970 Broken 7c9b8aa Worked 2.69 Official Since 2.71 getActionFrame will now revert to a frame of 0 once the animation has ended rather than the frame the anim ended on, as pre 2.71 did. Seems like another one related to multithreded anims again or maybe the unlimited layers patch?. See screenshots for clarity. The more worrying problem is it can now never return the very last frame before it reverts to returning a frame of 0 which is bad for your logic if it works on using that very last frame played. it seems it can miss the last anim frame if the framerate alters during animation playback. Hard to report in a blend that needs to stress your system. but I can post some screenshots from some animation runs to prove it. 2.71 ![2.7.jpg](https://archive.blender.org/developer/F106145/2.7.jpg) 2.69 ![2.6.jpg](https://archive.blender.org/developer/F106147/2.6.jpg) [getAnimFrame_Bug.blend](https://archive.blender.org/developer/F106144/getAnimFrame_Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @xonar

Added subscriber: @xonar

#41813 was marked as duplicate of this issue

#41813 was marked as duplicate of this issue
Member

Added subscribers: @(Deleted), @Moguri

Added subscribers: @(Deleted), @Moguri
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Mitchell Stokes self-assigned this 2015-10-07 07:23:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41536
No description provided.